fix horizontal scrollbar

--- a/public/less/admin/admin.less
+++ b/public/less/admin/admin.less
@@ -126,6 +126,7 @@
 
 	.wrapper {
 		width: 100%;
+		overflow-y: hidden;
 	}
 
 	.panel {
